--- a/app/views/users/_fields.haml
+++ b/app/views/users/_fields.haml
@@ -48,10 +48,11 @@
     = f.label :time_zone, t('.time_zone')
     = f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, :default => "Eastern Time (US & Canada)"
 
-  .language.select
-    = f.label :language, t('.language')
-    = f.select :language, User::LANGUAGES
+.language.select
+  = f.label :language, t('.language')
+  = f.select :language, User::LANGUAGES
 
+- unless user.new_record?
   .first_day_of_week.select
     = f.label :first_day_of_week, t('.first_day_of_week')
     = f.select :first_day_of_week, [[t('.sunday'), 'sunday'],[t('.monday'), 'monday']]
