--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -4,6 +4,9 @@
     = task_list_form(project,TaskList.new)
   #task_lists  
     = list_task_lists(project,task_lists,current_target)
+    
+  .subscribe
+    = link_to t('.subscribe'), user_rss_token(project_task_lists_path(@current_project, :format => :rss))
   =# comments_settings
   =# reorder_task_list_link(project,task_lists)
   
