Adding watch/unwatch links for conversations, task lists and tasks

--- a/app/views/task_lists/_show.haml
+++ b/app/views/task_lists/_show.haml
@@ -7,3 +7,5 @@
     = list_comments(task_list.comments,task_list)
   
   = people_watching(task_list)
+  #watch_link
+    = watch_task_list_link(current_user,task_list)
