Adding max upload size for fleximage

--- a/app/views/uploads/_new.haml
+++ b/app/views/uploads/_new.haml
@@ -4,6 +4,7 @@
     = hidden_field_tag 'iframe', 'true'
     .file
       = t('.select_a_file')
+      = hidden_field_tag 'MAX_FILE_SIZE', Upload::MAX_FILE_SIZE
       = f.file_field :file, :size => 25
       = loading('upload')
       = observe_upload_form
