--- a/app/views/emailer/forgot_password.haml
+++ b/app/views/emailer/forgot_password.haml
@@ -16,5 +16,5 @@
 
   .footer{ :style => email_text(:small) }
     %p= t('emailer.reset_password.report_abuse', :email => @user.email)
-    %p= t('emailer.reset_password.problems')
+    %p= t('emailer.reset_password.problems', :support => APP_CONFIG['support'])
 
