--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -2,6 +2,6 @@
   %p
   %span
     &copy; 2009
-  =link_to 'Teambox', 'http://teambox.com'
+  = link_to 'Teambox', 'http://www.teambox.com'
   .right
     = help_link
