--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -127,6 +127,7 @@ form.edit_comment
     .body
       :font-size 12px
       :color rgb(60,60,60)
+      :overflow auto
       p
         :font-family "Lucida Grande",Verdana,Arial,Helvetica,sans-serif
         :line-height 1.3em
