--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -55,10 +55,11 @@
       :margin 0px
       :color rgb(150,150,150)
     :margin
-      :top 5px
+      :top 15px
     :background rgb(240,240,240)
     :border solid 1px rgb(220,220,220)
-    :padding 8px
+    :padding 3px
+      :left 10px
     :-moz-border-radius 8px
     :-webkit-border-radius 8px  
     .filters
