--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -25,6 +25,7 @@
         :float left
       .actions
         :float right
+        :text-align right
       .text
         :margin-left 68px
         .name
