--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -3,3 +3,6 @@
   = edit_side_upload_form(@current_project,Upload.new)
   
 =list_uploads(@current_project,@uploads)
+- if false
+  = javascript_tag "FancyZoomBox.directory = 'http://localhost:3000/images/zoom';" 
+  = javascript_tag "$$('a.fancyzoom').each(function(e) { new FancyZoom(e) })"
