--- a/app/views/uploads/new_upload.haml
+++ b/app/views/uploads/new_upload.haml
@@ -1,4 +1,4 @@
 #new_upload
   = error_messages_for :upload
   - form_for [@current_project,@upload], :html => { :multipart => true } do |f|
-    = f.file_field :file
+    = f.file_field :asset
