--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -17,3 +17,7 @@
       = link_to t('.invite_people'), project_people_path(@current_project)
   .subscribe
     = link_to t('.subscribe'), user_rss_token(project_path(@current_project, :format => :rss))
+
+- if false
+  = javascript_tag "FancyZoomBox.directory = 'http://localhost:3000/images/zoom';" 
+  = javascript_tag "$$('a.fancyzoom').each(function(e) { new FancyZoom(e) })"
