--- a/app/views/uploads/_new.haml
+++ b/app/views/uploads/_new.haml
@@ -4,8 +4,7 @@
     = hidden_field_tag 'iframe', 'true'
     .file
       = t('.select_a_file')
-      = hidden_field_tag 'MAX_FILE_SIZE', Upload::MAX_FILE_SIZE
-      = f.file_field :file, :size => 25
+      = f.file_field :asset, :size => 25, :id => 'upload_file'
       = loading('upload')
       = observe_upload_form
 =loading('upload_iframe_form')
