--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -1,3 +1,4 @@
+with_description
 .upload
   :margin 0px
     :top 15px
@@ -11,6 +12,8 @@
   .block
     :width 540px
     :float right
+    .description
+      :padding-bottom 5px
     .name
       :font-size 12px
       :margin-bottom 5px
@@ -22,13 +25,6 @@
       :float right
       :font-size 10px
       :color rgb(180,180,180)
-    .body
-      :font-size 12px
-      :color rgb(60,60,60)
-      p
-        :font-family "Lucida Grande",Verdana,Arial,Helvetica,sans-serif
-        :line-height 1.3em
-        :margin 0
     
 .iframe_container
   :height 28px
