Add Ganntt Chart

--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -67,6 +67,17 @@ a.new_task_link
   :-webkit-border-radius 4px  
   :padding 10px
   :margin-bottom 10px
+  .date_select
+    :margin-bottom 20px
+    label 
+      :font-size 12px
+  .start_on 
+    :float left
+    :width 300px
+  .finish_on
+    :float right
+    :width 300px  
+    :text-align right
   .text_field
     :padding-right 10px
     input
