--- a/app/views/task_lists/_fields.haml
+++ b/app/views/task_lists/_fields.haml
@@ -1,2 +1,9 @@
 .name.text_field
   = f.text_field :name, :class => 'focus'
+- unless task_list.new_record?
+  .date_select.start_on
+    =f.label :start_on
+    =f.date_select :start_on, :start_year => Time.current.year
+  .date_select.finish_on
+    =f.label :finish_on
+    =f.date_select :finish_on, :start_year => Time.current.year
