--- a/app/views/task_lists/index.haml
+++ b/app/views/task_lists/index.haml
@@ -1,6 +1,9 @@
 -content_for :column do
   = task_list_column(@current_project,@task_lists,@task_list)
 
+.gantt
+  = @chart.to_html(1, 22, 30, 0)
+
 - unless @task_lists.empty?
   #activities
     = list_activities(@activities)
