--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -2,7 +2,14 @@
   .index_projects
     .content
       h2
-        :margin 5px 0 0 20px
+        :font-size 22px
+        :margin 10px
+          :top 0px
+          :right 0px
+        :padding
+          :bottom 5px
+        :border-bottom solid 2px rgb(240,240,240)
+
 
   .show_projects, .index_task_lists
     #activities
