--- a/app/views/shared/_navigation.erb
+++ b/app/views/shared/_navigation.erb
@@ -10,6 +10,7 @@ if logged_in?
         t.links_to welcome_path
         t.highlights_on :controller => :users, :action => :welcome
         t.li_class = 'welcome'
+        t.tab_index = 100
       end
     end
     
@@ -18,6 +19,7 @@ if logged_in?
       t.links_to projects_path
       t.highlights_on :controller => :projects, :action => :index
       #t.li_end "#{render :partial => 'shared/projects_dropdown'}"
+      t.tab_index = 101
     end
 
     add_tab do |t|
@@ -25,9 +27,11 @@ if logged_in?
       t.links_to new_project_path
       t.highlights_on :controller => :projects, :action => :new
       t.li_class = 'new'
+      t.tab_index = 102
     end
   
     unless current_user.get_recent_projects.empty?
+      tab_index = 103
       for project in current_user.get_recent_projects
         add_tab do |t|
           t.named truncate(project.name, :length => 20)
@@ -35,6 +39,8 @@ if logged_in?
           if project == @current_project
             t.highlights_on :controller => controller_name
           end
+          t.tab_index = tab_index
+          tab_index.succ
         end
       end
     end  
