--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -2,7 +2,8 @@
   :display block
   :font-size 12px
   :padding-bottom 5px
-
+form
+  :margin 0px
 .text_field, .text_area
   :margin-bottom 10px
   label
