--- a/app/views/shared/_global_navigation.erb
+++ b/app/views/shared/_global_navigation.erb
@@ -14,12 +14,14 @@ render_tabnav :global do
       t.named "#{current_user.login}"
       t.links_to user_path(current_user)
       t.highlights_on :controller => :users, :action => :show
+      t.tab_index = '50'
     end
     
     add_tab do |t|
       t.named t('.settings')
       t.links_to account_settings_path
       t.highlights_on :controller => :users, :action => :edit
+      t.tab_index = '51'
     end
     
     if current_user.invitations.count > 0
@@ -27,31 +29,37 @@ render_tabnav :global do
         t.named t('.project_invitations', :count => current_user.invitations.count)
         t.links_to user_invitations_path(current_user)
         t.highlights_on :controller => :users, :action => :invitations
+        t.tab_index = '52'
       end
     end
     
     add_tab do |t|
       t.named t('.logout')
       t.links_to logout_path
+      t.tab_index = '53'
     end
   else
     add_tab do |t|
       t.named t('.home')
       t.links_to APP_CONFIG['home_url']
+      t.tab_index = '50'
     end if APP_CONFIG.has_key? 'home_url'
 
     add_tab do |t|
       t.named t('.tour')
       t.links_to APP_CONFIG['tour_url']
+      t.tab_index = '51'
     end if APP_CONFIG.has_key? 'tour_url'
 
     add_tab do |t|
       t.named t('.blog')
+      t.tab_index = '52'
       t.links_to APP_CONFIG['blog_url']
     end if APP_CONFIG.has_key? 'blog_url'
 
     add_tab do |t|
       t.named t('.signup')
+      t.tab_index = '54'
       t.links_to signup_path
       t.li_class = 'right_side'
     end
@@ -59,6 +67,7 @@ render_tabnav :global do
     add_tab do |t|
       t.named t('.login')
       t.links_to login_path
+      t.tab_index = '53'      
       t.highlights_on :controller => :sessions, :action => :new
       t.highlights_on :controller => :sessions, :action => :create
       t.li_class = 'right_side'
