--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -5,4 +5,4 @@
 - form_for @user do |f|
   = user_fields(f, @user, :invite => @invite)
   .submit
-    = submit_tag t('.submit')
+    = submit_tag t('.submit'), :tabindex => 300
