--- a/app/views/uploads/_upload.haml
+++ b/app/views/uploads/_upload.haml
@@ -1,22 +1,16 @@
 .upload{ :id => "upload_#{upload.id}" }
   .info
-    - if upload.is_image?
-      =image_tag(upload.asset(:thumb))
-      - if false
-        = link_to image_tag(upload.asset(:thumb)), "#upload_thumb_#{upload.id}", :class => "fancyzoom"
-        .large_thumbnail{ :id => "upload_thumb_#{upload.id}"}
-          =image_tag upload.asset(:original)
-    - else
-      = link_to file_icon_image(upload,'48px'), upload.url
+    = link_to upload.file_type, upload.url, :class => upload.file_type
   .block
     .filename.show_details
-      .description
-        = link_to upload.description, upload.url  if upload.description
       .date
         = posted_date upload.created_at
       .name
         = link_to upload.user.name, user_path(upload.user)
+        = activity_project_link(upload.project)
         = t('.uploaded_the_file')
+        = link_to upload.description, upload.url if upload.description
+      .body  
         = upload_link(project,upload)
         = number_to_human_size(upload.size)
   .clear
