--- a/public/stylesheets/sass/primers.sass
+++ b/public/stylesheets/sass/primers.sass
@@ -18,6 +18,7 @@
         :top 5px
         :bottom 10px
       :text-align center
+      :border-bottom none
       a
         :color rgb(0,0,150)
         :text-decoration underline
