--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -80,6 +80,17 @@
       :display inline
     .on_hover
       :display block
+
+
+h2.grande
+  :font-size 22px
+  :margin 10px
+    :top 0px
+    :right 0px
+  :padding
+    :bottom 5px
+  :border-bottom solid 2px rgb(240,240,240)
+
 @media print
   body
     :background rgb(255,255,255)
