--- a/public/stylesheets/sass/invitations.sass
+++ b/public/stylesheets/sass/invitations.sass
@@ -1,10 +1,16 @@
+.index_invitations 
+  div.content
+    :padding-top 5px
+    
 .invitations
   :font-size 12px
   .project
-    :background-color rgb(255,255,200)
-    :margin 10px
+    :-moz-border-radius 6px
+    :-webkit-border-radius 6px
+    :border solid 1px rgb(200,200,200)
+    :background rgb(250,250,255)
     :padding 10px
-    :border 1px rgb(220,220,150) solid
+    :margin-bottom 5px
     :width 580px
     .text
       :margin-bottom 15px
